fix "collapse menu" link color

--- a/packages/calypso-color-schemes/src/shared/color-schemes/_classic-dark.scss
+++ b/packages/calypso-color-schemes/src/shared/color-schemes/_classic-dark.scss
@@ -338,6 +338,9 @@
 	--color-sidebar-submenu-hover-text: #00b9eb;
 	--color-sidebar-submenu-selected-text: var(--studio-white);
 
+	/* Collapse Menu Button Fix */
+	--color-collapse-menu-text: var(--color-sidebar-text-alternative);
+
 	/* Command Palette Items */
 	--wp-admin-theme-color: var(--studio-pink-50);
 }
